--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -554,7 +554,7 @@ div.menu-item .soc_header_mobile {
 
 @media (min-width: 1399.98px) {
   .header_search input {
-    min-width: 400px;
+    min-width: 350px;
   }
 }
 
@@ -620,7 +620,7 @@ div.menu-item .soc_header_mobile {
   .ntf_header,
   .toggle-button-cover,
   .user_header_menu > div:first-child,
-  .user_header_menu > div:nth-child(2) {
+  .user_header_menu > div:nth-child(3) {
     display: none !important;
   }
 
@@ -912,8 +912,26 @@ div.menu-item .soc_header_mobile {
 .user_header_menu > div {
   position: relative;
   margin-right: 30px;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 18px;
+  color: #ffffff;
 }
 
+.user_header_menu .network {
+  display: flex;
+  align-items: center;
+  margin-right: 5px;
+  margin-left: 15px;
+}
+
+.user_header_menu .network > span {
+  position: relative;
+  top: auto;
+  right: auto;
+}
 .user_header_menu div {
   position: relative;
   transition: none;
@@ -945,13 +963,24 @@ div.menu-item .soc_header_mobile {
 }
 
 .user_header_menu .header_avatar {
-  border: 1px solid #616161;
-  width: 41px;
+  background: url('../../assets/img/colection_ava_dark.png') no-repeat center;
+  background-size: contain;
+  width: 50px;
   height: 41px;
   border-radius: 8px;
   padding: 2px;
   margin-right: 0;
   cursor: pointer;
+}
+
+.header_avatar_wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+div .header_avatar_wrapper img {
+  width: 30px;
 }
 
 .header_avatar_wrapper {
@@ -1117,5 +1146,17 @@ div.menu-item .soc_header_mobile {
 
   .ntf_header {
     margin-left: 10px;
+  }
+}
+
+@media (max-width: 1240.98px) {
+  .dark .header_search input {
+    width: 195px;
+  }
+}
+
+@media (max-width: 1040.98px) {
+  .dark .header_search input {
+    width: 155px;
   }
 }
