--- a/src/components/Profile/ProfileSettings/ProfileSettings.css
+++ b/src/components/Profile/ProfileSettings/ProfileSettings.css
@@ -100,7 +100,7 @@
   outline: none;
   cursor: pointer;
   transition: 0.4s;
-  background: url('../../assets/img/signup_button_bg.png') no-repeat center;
+  background: url('../../../assets/img/signup_button_bg.png') no-repeat center;
   background-size: contain;
   font-family: Poppins;
   font-style: normal;
@@ -125,7 +125,8 @@
 
 .profile_settings_button::before {
   content: '';
-  background: url('../../assets/img/learn_more_button_bg.png') no-repeat center;
+  background: url('../../../assets/img/learn_more_button_bg.png') no-repeat
+    center;
   background-size: contain;
   position: absolute;
   left: 0;
