--- a/src/components/Profile/ProfileWallet/ProfileWallet.css
+++ b/src/components/Profile/ProfileWallet/ProfileWallet.css
@@ -109,7 +109,7 @@
 }
 
 .create_wallet {
-  background: url('../../assets/img/connect_wallet_profile.png') no-repeat
+  background: url('../../../assets/img/connect_wallet_profile.png') no-repeat
     center;
   background-size: contain;
   font-family: Poppins;
@@ -148,8 +148,8 @@
 
 .create_wallet::before {
   content: '';
-  background: url('../../assets/img/connect_wallet_profile_hover.png') no-repeat
-    center;
+  background: url('../../../assets/img/connect_wallet_profile_hover.png')
+    no-repeat center;
   background-size: contain;
   width: 100%;
   height: 100%;
@@ -197,61 +197,67 @@
 }
 
 .create_wallet_metamask {
-  background: url('../../assets/img/create_wallet/1.png') no-repeat center;
+  background: url('../../../assets/img/create_wallet/1.png') no-repeat center;
   background-size: 99% 99%;
 }
 
 .dark .create_wallet_metamask {
-  background: url('../../assets/img/create_wallet/1_dark.png') no-repeat center;
+  background: url('../../../assets/img/create_wallet/1_dark.png') no-repeat
+    center;
   background-size: 99% 99%;
 }
 .create_wallet_trust {
-  background: url('../../assets/img/create_wallet/2.png') no-repeat center;
+  background: url('../../../assets/img/create_wallet/2.png') no-repeat center;
   background-size: 99% 99%;
 }
 
 .dark .create_wallet_trust {
-  background: url('../../assets/img/create_wallet/2_dark.png') no-repeat center;
+  background: url('../../../assets/img/create_wallet/2_dark.png') no-repeat
+    center;
   background-size: 99% 99%;
 }
 
 .create_wallet_onramper {
-  background: url('../../assets/img/create_wallet/3.png') no-repeat center;
+  background: url('../../../assets/img/create_wallet/3.png') no-repeat center;
   background-size: 99% 99%;
 }
 
 .dark .create_wallet_onramper {
-  background: url('../../assets/img/create_wallet/3_dark.png') no-repeat center;
+  background: url('../../../assets/img/create_wallet/3_dark.png') no-repeat
+    center;
   background-size: 99% 99%;
 }
 
 .create_wallet_binance {
-  background: url('../../assets/img/create_wallet/4.png') no-repeat center;
+  background: url('../../../assets/img/create_wallet/4.png') no-repeat center;
   background-size: 99% 99%;
 }
 
 .dark .create_wallet_binance {
-  background: url('../../assets/img/create_wallet/4_dark.png') no-repeat center;
+  background: url('../../../assets/img/create_wallet/4_dark.png') no-repeat
+    center;
   background-size: 99% 99%;
 }
 
 .create_wallet_moonpay {
-  background: url('../../assets/img/create_wallet/5.png') no-repeat center;
+  background: url('../../../assets/img/create_wallet/5.png') no-repeat center;
   background-size: 99% 99%;
 }
 
 .dark .create_wallet_moonpay {
-  background: url('../../assets/img/create_wallet/5_dark.png') no-repeat center;
+  background: url('../../../assets/img/create_wallet/5_dark.png') no-repeat
+    center;
   background-size: 99% 99%;
 }
 
 .create_wallet_crypto {
-  background: url('../../assets/img/create_wallet/6.png') no-repeat center;
+  background: url('../../../assets/img/create_wallet/6.png') no-repeat center;
   background-size: 99% 99%;
 }
 
 .dark .create_wallet_crypto {
-  background: url('../../assets/img/create_wallet/6_dark.png') no-repeat center;
+  background: url('../../../assets/img/create_wallet/6_dark.png') no-repeat
+    center;
   background-size: 99% 99%;
 }
 
